--- a/styles/globals.css
+++ b/styles/globals.css
@@ -33,3 +33,41 @@ h3 {
   font-size: 22px;
   font-weight: 500;
 }
+
+.featured-gradient::after {
+  position: absolute;
+  content: '';
+  height: 100%;
+  width: 100%;
+  top: 0;
+  left: 0;
+  background: linear-gradient(to bottom, rgba(255, 0, 0, 0) 0%, #070426 100%);
+}
+
+.triangle {
+  position: relative;
+  transform: scale(6) rotate(180deg);
+  width: 23px;
+  height: 0px;
+  border-left: 1px solid transparent;
+  border-bottom: 1px solid;
+  left: 42%;
+}
+.triangle,
+.triangle::before {
+  display: block;
+  box-sizing: border-box;
+  border-right: 1px solid transparent;
+}
+.triangle::before {
+  content: '';
+  position: absolute;
+  width: 19px;
+  height: 19px;
+  border-left: 1px solid;
+  border-top: 1px solid;
+  border-bottom: 1px solid transparent;
+  transform: rotate(45deg) skew(10deg, 10deg);
+  left: 1px;
+  bottom: -10px;
+}
