--- a/styles/globals.css
+++ b/styles/globals.css
@@ -34,6 +34,10 @@ h3 {
   font-weight: 500;
 }
 
+h4 {
+  font-size: 20px;
+}
+
 .featured-gradient::after {
   position: absolute;
   content: '';
@@ -44,6 +48,20 @@ h3 {
   background: linear-gradient(to bottom, rgba(255, 0, 0, 0) 0%, #070426 100%);
 }
 
+.explorer-gradient::after {
+  position: absolute;
+  content: '';
+  height: 100%;
+  width: 100%;
+  top: 0;
+  left: 0;
+  background: linear-gradient(to bottom, rgba(255, 0, 0, 0) 0%, #000000 100%);
+}
+
+.shadow-white {
+  box-shadow: 0px 0px 10px 8px rgba(255, 255, 255, 0.04);
+}
+
 .triangle {
   position: relative;
   transform: scale(6) rotate(180deg);
@@ -51,7 +69,7 @@ h3 {
   height: 0px;
   border-left: 1px solid transparent;
   border-bottom: 1px solid;
-  left: 42%;
+  left: 46%;
 }
 .triangle,
 .triangle::before {
