--- a/styles/globals.css
+++ b/styles/globals.css
@@ -67,34 +67,6 @@ h4 {
   box-shadow: 0px 0px 10px 8px rgba(255, 255, 255, 0.04);
 }
 
-.triangle {
-  position: relative;
-  transform: scale(6) rotate(180deg);
-  width: 23px;
-  height: 0px;
-  border-left: 1px solid transparent;
-  border-bottom: 1px solid;
-  left: 46%;
-}
-.triangle,
-.triangle::before {
-  display: block;
-  box-sizing: border-box;
-  border-right: 1px solid transparent;
-}
-.triangle::before {
-  content: '';
-  position: absolute;
-  width: 19px;
-  height: 19px;
-  border-left: 1px solid;
-  border-top: 1px solid;
-  border-bottom: 1px solid transparent;
-  transform: rotate(45deg) skew(10deg, 10deg);
-  left: 1px;
-  bottom: -10px;
-}
-
 .description {
   height: 66px;
   overflow: hidden;
@@ -113,17 +85,28 @@ h4 {
   display: none !important;
 }
 
-.sidebarActive {
-  transform: translateX(0);
-  transition: all ease 0.3s;
+.alice-carousel__next-btn,
+.alice-carousel__prev-btn {
+  top: 50%;
+  padding: 0 !important;
 }
 
-.error-bg {
-  background-image: url('https://res.cloudinary.com/dicynt7ms/image/upload/v1623851827/game-portal/errorBg_lnrwfj.png');
-  background-position: center;
+.alice-carousel__prev-btn {
+  width: 0 !important;
+  left: 20px;
 }
 
-#hero {
-  background-image: url('https://res.cloudinary.com/dicynt7ms/image/upload/f_webp/v1623090716/game-portal/home-hero_zdjvsv.png');
-  background-position: center;
+.alice-carousel__next-btn {
+  width: 50px !important;
+  right: 20px;
+}
+
+@media (min-width: 1536px) {
+  .alice-carousel__prev-btn {
+    left: 100px;
+  }
+
+  .alice-carousel__next-btn {
+    right: 100px;
+  }
 }
