--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,6 +1,3 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
 @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 * {
@@ -43,6 +40,13 @@ h4 {
   font-size: 20px;
 }
 
+h4,
+h5,
+h6,
+p {
+  font-weight: 400;
+}
+
 .featured-gradient::after {
   position: absolute;
   content: '';
@@ -68,7 +72,10 @@ h4 {
 }
 
 .description {
-  letter-spacing: 1px;
+  letter-spacing: 0.05rem;
+  line-height: 1.3;
+  font-size: 14px;
+  font-weight: 300;
 }
 
 .game-item .hover-photo {
