--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,6 +10,19 @@ html {
   scroll-behavior: smooth;
 }
 
+html::-webkit-scrollbar {
+  width: 12px; /* width of the entire scrollbar */
+}
+
+html::-webkit-scrollbar-track {
+  background-color: #070426; /* color of the scroll thumb */
+}
+
+html::-webkit-scrollbar-thumb {
+  background: #35bfff; /* color of the tracking area */
+  border-radius: 2px; /* roundness of the scroll thumb */
+}
+
 a {
   text-decoration: none;
   cursor: pointer;
